# vkbottle-callback

./: FAQ.md  README.md  pyproject.toml
examples/: callback_echo.py  rules_example.py
vkbottle_callback/: __init__.py  main.py  rules.py  types.py
