[tool.poetry]
name = "vkbottle-callback"
version = "0.1.0"
description = "Add supporting of MessageEvent (event from callback buttons)"
authors = ["mironovmeow <71277890+mironovmeow@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vkbottle = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
