[tool.poetry]
name = "vkbottle-callback"
version = "1.1.2"
description = "Add supporting of MessageEvent (event from callback buttons)"
authors = ["mironovmeow"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mironovmeow/vkbottle-callback"
repository = "https://github.com/mironovmeow/vkbottle-callback"
keywords = [
  "vk",
  "vk-api",
  "vkbottle",
  "callback",
  "message-event",
]

[tool.poetry.dependencies]
python = "^3.7"
vkbottle = "4.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
